<resources>
    <string name="app_name">PlanTravel</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Início</string>
    <string name="menu_new_travel">Nova viagem</string>
    <string name="menu_friends">Amigos</string>
    <string name="menu_account">Perfil</string>

    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>

    <string name="selected_friend">Selecionar</string>

    <string name="menu_logout">Sair</string>


    <string name="hello_blank_fragment"></string>
</resources>
