<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new_travel"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/menu_new_travel" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_account" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
