<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.plantravel.Inicio"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_new_travel"
        android:name="com.example.plantravel.NewTravel"
        android:label="@string/menu_new_travel"
        tools:layout="@layout/fragment_new_travel" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.plantravel.Amigos"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_amigos" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.plantravel.Perfil"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_perfil" />



</navigation>